--- a/admin.html
+++ b/admin.html
@@ -2,285 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Admin – BDStreamHub</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BDStreamHub Admin</title>
   <style>
     body {
+      background: #f9f9f9;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #1f1f1f;
-      color: #eee;
+      padding: 0;
     }
     header {
-      background: #111;
+      background: #0a0a23;
+      color: #fff;
       padding: 15px 20px;
       text-align: center;
       font-size: 24px;
       font-weight: bold;
-      color: #08f;
     }
-    #login-section, #admin-section {
-      max-width: 500px;
-      margin: 40px auto;
-      background: #222;
+    .container {
+      max-width: 600px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    input, textarea, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+    button {
+      background: #007bff;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+    .match {
+      background: #f1f1f1;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 6px;
+    }
+    .match-actions {
+      text-align: right;
+      margin-top: 5px;
+    }
+    .match-actions button {
+      margin-left: 5px;
+      font-size: 14px;
+      padding: 5px 10px;
+    }
+    #login {
+      max-width: 300px;
+      margin: 80px auto;
+      background: #fff;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 15px #000a;
-    }
-    #login-section input {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 12px;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-    }
-    #login-section button {
-      width: 100%;
-      padding: 12px;
-      background: #08f;
-      border: none;
-      border-radius: 6px;
-      color: #111;
-      font-size: 18px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    #login-msg { color: #f55; text-align: center; margin-top: 10px; }
-
-    form input, form textarea {
-      width: 100%;
-      margin: 8px 0;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #444;
-      background: #1a1a1a;
-      color: #eee;
-      font-size: 14px;
-    }
-    form label {
-      font-size: 14px;
-      margin-top: 8px;
-      display: block;
-    }
-    form button {
-      width: 100%;
-      padding: 12px;
-      background: #08f;
-      border: none;
-      border-radius: 6px;
-      color: #111;
-      font-size: 16px;
-      font-weight: bold;
-      margin-top: 12px;
-      cursor: pointer;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 30px;
-      background: #222;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    table th, table td {
-      padding: 10px;
-      border-bottom: 1px solid #444;
-      text-align: left;
-      font-size: 14px;
-    }
-    table th {
-      background: #111;
-      color: #08f;
-    }
-    .action-btn {
-      background: #08f;
-      color: #111;
-      border: none;
-      padding: 6px 12px;
-      margin-right: 6px;
-      border-radius: 6px;
-      font-size: 13px;
-      cursor: pointer;
-    }
-    .action-btn.delete {
-      background: #f33;
-      color: #fff;
-    }
-    .action-btn:hover { opacity: 0.8; }
-
-    @media (max-width: 600px) {
-      table, thead, tbody, th, td, tr { display: block; }
-      table thead { display: none; }
-      tr { margin-bottom: 15px; }
-      td { padding-left: 50%; position: relative; }
-      td::before {
-        position: absolute; left: 10px; top: 10px;
-        color: #08f; font-weight: bold;
-      }
-      td:nth-of-type(1)::before { content: "Match"; }
-      td:nth-of-type(2)::before { content: "Time"; }
-      td:nth-of-type(3)::before { content: "Server 1"; }
-      td:nth-of-type(4)::before { content: "Server 2"; }
-      td:nth-of-type(5)::before { content: "Server 3"; }
-      td:nth-of-type(6)::before { content: "Actions"; padding-left: 0; }
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
 
-  <header>BDStreamHub Admin</header>
+<div id="login">
+  <h2>Admin Login</h2>
+  <input type="password" id="password" placeholder="Enter admin password">
+  <button onclick="login()">Login</button>
+</div>
 
-  <!-- Login Section -->
-  <div id="login-section">
-    <input type="password" id="admin-password" placeholder="Enter Admin Password"/>
-    <button onclick="doLogin()">Login</button>
-    <div id="login-msg"></div>
-  </div>
-
-  <!-- Admin Panel -->
-  <div id="admin-section" style="display:none;">
-    <form id="match-form" onsubmit="saveMatch(event)">
-      <label>Match Title</label>
-      <input name="matchTitle" required/>
-
-      <label>Team 1 Name</label>
-      <input name="team1" required/>
-
-      <label>Team 2 Name</label>
-      <input name="team2" required/>
-
-      <label>Team 1 Logo URL</label>
-      <input name="team1Logo" required/>
-
-      <label>Team 2 Logo URL</label>
-      <input name="team2Logo" required/>
-
-      <label>Match Date &amp; Time (BD Time, ISO w/ +06:00)</label>
-      <input name="matchTime" type="datetime-local" step="1" required/>
-
-      <label>Server 1 URL</label>
-      <input name="server1" required/>
-
-      <label>Server 2 URL (optional)</label>
-      <input name="server2"/>
-
-      <label>Server 3 URL (optional)</label>
-      <input name="server3"/>
-
-      <label>Notice (optional)</label>
-      <textarea name="notice" rows="2"></textarea>
-
-      <button type="submit">Save Match</button>
+<div id="adminPanel" style="display:none;">
+  <header>BDStreamHub – Admin Panel</header>
+  <div class="container">
+    <form id="matchForm">
+      <input name="Match" placeholder="Match Name" required>
+      <input name="Team1" placeholder="Team 1 Name" required>
+      <input name="Team2" placeholder="Team 2 Name" required>
+      <input name="Team1Logo" placeholder="Team 1 Logo URL" required>
+      <input name="Team2Logo" placeholder="Team 2 Logo URL" required>
+      <input name="MatchTime" type="datetime-local" required>
+      <input name="Intent1" placeholder="Stream URL 1" required>
+      <input name="Intent2" placeholder="Stream URL 2">
+      <input name="Intent3" placeholder="Stream URL 3">
+      <textarea name="Notice" placeholder="Notice (optional)"></textarea>
+      <button type="submit">Add Match</button>
     </form>
 
-    <table id="history-table">
-      <thead>
-        <tr>
-          <th>Match</th>
-          <th>Time (BD)</th>
-          <th>Srv1</th>
-          <th>Srv2</th>
-          <th>Srv3</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <h3>Match History</h3>
+    <div id="matchList">Loading...</div>
   </div>
+</div>
 
-  <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbwxRYG33l5iXVvbGysPFixZThWftJ566wI5ko0cV5r7yOPSXr1D7Z_4qkLrYg-9U--4rg/exec?action=";
-    const ADMIN_PASSWORD = "admin123"; // change this!
+<script>
+  const adminPassword = "bdhub123"; // Change this password
+  const sheetAPI = "https://script.google.com/macros/s/AKfycbys6AFNs2s1MKZ1zyJxaeUW-_Vmq5BuIEC8Qjyr-zXkx_x28F7rWTi2D0EmQlnsPvTnCQ/exec";
 
-    function doLogin() {
-      const pwd = document.getElementById('admin-password').value;
-      if (pwd === ADMIN_PASSWORD) {
-        document.getElementById('login-section').style.display = 'none';
-        document.getElementById('admin-section').style.display = 'block';
+  function login() {
+    const pass = document.getElementById("password").value;
+    if (pass === adminPassword) {
+      document.getElementById("login").style.display = "none";
+      document.getElementById("adminPanel").style.display = "block";
+      loadMatches();
+    } else {
+      alert("Incorrect password");
+    }
+  }
+
+  document.getElementById("matchForm").onsubmit = function(e) {
+    e.preventDefault();
+    const form = e.target;
+    const data = Object.fromEntries(new FormData(form).entries());
+    data.MatchTime = new Date(data.MatchTime).toISOString(); // Convert to ISO
+
+    fetch(sheetAPI, {
+      method: 'POST',
+      body: JSON.stringify(data)
+    }).then(res => res.text())
+      .then(() => {
+        alert("Match added!");
+        form.reset();
         loadMatches();
-      } else {
-        document.getElementById('login-msg').innerText = 'Wrong password!';
-      }
-    }
-
-    // Fetch and display existing matches
-    async function loadMatches() {
-      const res = await fetch(API_URL + 'get');
-      const data = await res.json();
-      const tbody = document.querySelector('#history-table tbody');
-      tbody.innerHTML = '';
-      data.matches.forEach(m => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${m.matchTitle}</td>
-          <td>${new Date(m.matchTime).toLocaleString('en-GB', { timeZone: 'Asia/Dhaka', hour12: true })}</td>
-          <td><a href="${m.server1}" target="_blank">Link</a></td>
-          <td>${m.server2? `<a href="${m.server2}" target="_blank">Link</a>` : ''}</td>
-          <td>${m.server3? `<a href="${m.server3}" target="_blank">Link</a>` : ''}</td>
-          <td class="actions">
-            <button class="action-btn" onclick="editMatch('${m.matchTitle}')">Edit</button>
-            <button class="action-btn delete" onclick="deleteMatch('${m.matchTitle}')">Delete</button>
-          </td>`;
-        tbody.appendChild(row);
       });
-    }
+  };
 
-    // Save new or edited match
-    async function saveMatch(e) {
-      e.preventDefault();
-      const form = e.target;
-      const data = {};
-      new FormData(form).forEach((v,k) => data[k] = v);
+  function loadMatches() {
+    fetch(sheetAPI).then(res => res.json()).then(data => {
+      const matches = data.matches || [];
+      const list = document.getElementById("matchList");
+      list.innerHTML = matches.map((m, i) => `
+        <div class="match">
+          <strong>${m.Match}</strong><br>
+          ${m.Team1} vs ${m.Team2} <br>
+          Time: ${new Date(m.MatchTime).toLocaleString("en-BD", { timeZone: "Asia/Dhaka" })}<br>
+          <div class="match-actions">
+            <button onclick="deleteMatch(${i})">Delete</button>
+          </div>
+        </div>
+      `).join("") || "No matches found.";
+    });
+  }
 
-      // Convert datetime-local (browser) to ISO+06:00
-      const dt = new Date(data.matchTime);
-      const offset = dt.getTimezoneOffset(); // in mins
-      const bdOffset = -360; // +6h => -360min
-      const bdTime = new Date(dt.getTime() + (offset - bdOffset) * 60000);
-      data.matchTime = bdTime.toISOString().replace('Z','+06:00');
-
-      // Determine action
-      const action = form.dataset.editing ? 'edit' : 'add';
-      data.password = ADMIN_PASSWORD;
-
-      const res = await fetch(API_URL + action + '&password=' + ADMIN_PASSWORD + '&matchTitle=' + encodeURIComponent(data.matchTitle), {
-        method:'POST',
-        body: JSON.stringify(data)
+  function deleteMatch(index) {
+    if (!confirm("Are you sure you want to delete this match?")) return;
+    fetch(sheetAPI + `?delete=${index}`, { method: 'GET' })
+      .then(res => res.text())
+      .then(() => {
+        alert("Match deleted.");
+        loadMatches();
       });
-      const txt = await res.text(); alert(txt);
-      form.reset(); delete form.dataset.editing;
-      loadMatches();
-    }
+  }
+</script>
 
-    // Populate form for editing
-    function editMatch(title) {
-      const row = [...document.querySelectorAll('#history-table tbody tr')]
-        .find(r => r.children[0].innerText === title);
-      if (!row) return;
-      const cols = row.children;
-      const form = document.getElementById('match-form');
-      form.matchTitle.value = cols[0].innerText;
-      // parse BD time back to local datetime-local
-      const iso = new Date(cols[1].innerText).toISOString().slice(0,16);
-      form.matchTime.value = iso;
-      // fetch servers from links
-      form.server1.value = cols[2].querySelector('a').href;
-      form.server2.value = cols[3].querySelector('a')?.href || '';
-      form.server3.value = cols[4].querySelector('a')?.href || '';
-      form.notice.value = ''; // personal notice row
-      form.dataset.editing = 'true';
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-
-    // Delete match
-    async function deleteMatch(title) {
-      if (!confirm('Delete '+title+'?')) return;
-      const res = await fetch(API_URL + 'delete&password=' + ADMIN_PASSWORD + '&matchTitle=' + encodeURIComponent(title));
-      alert(await res.text());
-      loadMatches();
-    }
-  </script>
 </body>
 </html>
